// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the normal TextInput component 1`] = `
<TextInput
  allowFontScaling={true}
  value="username"
/>
`;

exports[`renders the secure TextInput component for passwords 1`] = `
<TextInput
  allowFontScaling={true}
  secureTextEntry={true}
  value="passwordnotshown"
/>
`;
